fixed overflow

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -12,7 +12,7 @@
     height: auto;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
+    justify-content: center;
     align-items: center;
     padding-bottom: 20px;
     padding-top: 70px;
