--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -12,6 +12,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
+    
 }
 
