--- a/src/styles/generic.css
+++ b/src/styles/generic.css
@@ -6,7 +6,8 @@
 body {
     font-family: sans-serif;
     font-size: 100%;
-    overflow: hidden;
+    /*  this overflow causes problems! */
+    /* overflow: hidden; */
     padding: 0;
     margin: 0;
 }
