--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,7 +5,6 @@
     width: 100vw;
     justify-content: space-between;
     align-items: center;
-    /* background-color: var(--orange-red); */
     background-color: black;
     height: auto;
     /* box-shadow: 0px 5px 4px 0px rgba(230,82,45,0.76); */
@@ -68,7 +67,6 @@ nav ul {
 
 .navigation li {
     list-style-type: none;
-    /* text-decoration: none; */
     padding: 15px;
     width: 100%;
 }
@@ -106,5 +104,5 @@ nav ul {
     margin: 0 auto;
     padding: 7px 0;
     cursor:grab;
-    align-self: flex-end;
+    /* align-self: flex-end;  */
 }
